==> atomvm/AtomVM/src/platforms/rp2040/src/lib/sys.c <==
#include <sys.h>
#include <stdio.h>
#include <time.h>
#include <hardware/rtc.h>
#include <pico/multicore.h>
#include <pico/time.h>
#include <pico/util/queue.h>
#include <sys/time.h>
#include <pico/cyw43_arch.h>
#include <otp_socket.h>
#include <mbedtls/build_info.h>
#include <mbedtls/config.h>
#include <avmpack.h>
#include <defaultatoms.h>
#include <utils.h>
#include "rp2040_sys.h"
#include "trace.h"
#include "listeners.h"
#define SMP_MUTEX_LOCK(mtx) smp_mutex_lock(mtx)
#define SMP_MUTEX_UNLOCK(mtx) smp_mutex_unlock(mtx)
#define SMP_MUTEX_LOCK(mtx)
#define SMP_MUTEX_UNLOCK(mtx)

void sys_init_platform(GlobalContext *glb)
{
    struct RP2040PlatformData *platform = malloc(sizeof(struct RP2040PlatformData));
    glb->platform_data = platform;
#ifndef AVM_NO_SMP
    mutex_init(&platform->event_poll_mutex);
    cond_init(&platform->event_poll_cond);
    smp_init();
#endif
    queue_init(&platform->event_queue, sizeof(queue_t *), EVENT_QUEUE_LEN);

#ifdef LIB_PICO_CYW43_ARCH
    cyw43_arch_init();
    otp_socket_init(glb);
#endif

    platform->entropy_is_initialized = false;
    platform->random_is_initialized = false;
}

void sys_free_platform(GlobalContext *glb)
{
#ifdef LIB_PICO_CYW43_ARCH
    cyw43_arch_deinit();
#endif

    struct RP2040PlatformData *platform = glb->platform_data;
    queue_free(&platform->event_queue);

    if (platform->random_is_initialized) {
        mbedtls_ctr_drbg_free(&platform->random_ctx);
    }

    if (platform->entropy_is_initialized) {
        mbedtls_entropy_free(&platform->entropy_ctx);
    }

    free(platform);

#ifndef AVM_NO_SMP
    smp_free();
#endif
}

void sys_poll_events(GlobalContext *glb, int timeout_ms)
{
    struct RP2040PlatformData *platform = glb->platform_data;
#ifndef AVM_NO_SMP
    if (timeout_ms != 0) {
        mutex_enter_blocking(&platform->event_poll_mutex);
        if (queue_is_empty(&platform->event_queue)) {
            if (timeout_ms > 0) {
                cond_wait_timeout_ms(&platform->event_poll_cond, &platform->event_poll_mutex, timeout_ms);
            } else {
                cond_wait(&platform->event_poll_cond, &platform->event_poll_mutex);
            }
        }
        mutex_exit(&platform->event_poll_mutex);
    }
#else
    UNUSED(timeout_ms);
#endif
    queue_t *event = NULL;
    while (queue_try_remove(&platform->event_queue, &event)) {
        struct ListHead *listeners = synclist_wrlock(&glb->listeners);
        if (!process_listener_handler(glb, event, listeners, NULL, NULL)) {
            TRACE("sys: handler not found for: %p\n", (void *) event);
        }
        synclist_unlock(&glb->listeners);
    }
}

void sys_signal(GlobalContext *glb)
{
    struct RP2040PlatformData *platform = glb->platform_data;
    cond_signal(&platform->event_poll_cond);
}

void sys_monotonic_time(struct timespec *t)
{
    absolute_time_t now = get_absolute_time();
    uint64_t usec = to_us_since_boot(now);
    t->tv_nsec = (usec % 1000000) * 1000;
    t->tv_sec = (usec / 1000000);
}

uint64_t sys_monotonic_time_u64()
{
    absolute_time_t now = get_absolute_time();
    return to_us_since_boot(now);
}

mbedtls_ctr_drbg_context *sys_mbedtls_get_ctr_drbg_context_lock(GlobalContext *global)
{
    struct RP2040PlatformData *platform = global->platform_data;

    SMP_MUTEX_LOCK(platform->random_mutex);

    if (!platform->random_is_initialized) {
        mbedtls_ctr_drbg_init(&platform->random_ctx);

        mbedtls_entropy_context *entropy_ctx = sys_mbedtls_get_entropy_context_lock(global);
        // Safe to unlock it now, sys_mbedtls_entropy_func will lock it again later
        sys_mbedtls_entropy_context_unlock(global);

        const char *seed = "AtomVM RP2040 Mbed-TLS initial seed.";
        int seed_len = strlen(seed);
        int seed_err = mbedtls_ctr_drbg_seed(&platform->random_ctx, sys_mbedtls_entropy_func,
            entropy_ctx, (const unsigned char *) seed, seed_len);
        if (UNLIKELY(seed_err != 0)) {
            abort();
        }
        platform->random_is_initialized = true;
    }

    return &platform->random_ctx;
}
